# pinocchio

./: .clangd  .gitignore  .gitmodules  Cargo.toml  README  c_ast_notes.md  config.sh  debug.sh  field_notes.md  generate_with_circom.sh  generate_with_pinocchio.sh  pinocchio_notes.md  run.sh  run_circom.sh  run_pycparser_example.sh  setup_dependencies.sh
ccompiler/external-code/: makefile
ccompiler/input/: aux-bloom-filter-ifc.h  aux-bloom-filter.c  aux-vector-clock-ifc.h  aux-vector-clock.c  bloom-filter-ifc.h  bloom-filter.c  ivc-bloom-filter-ifc.h  ivc-bloom-filter.c  ivc-increment-ifc.h  ivc-increment.c  my-test.c  my-test.h  qsp-test.c  qsp-test.h
ccompiler/src/: ArgsObject.py  ArithBusReq.py  ArithBuses.py  ArithFactory.py  ArithmeticFieldOps.py  BitWidth.py  Board.py  BooleanBuses.py  BooleanFactory.py  BusReq.py  Buses.py  CaseHelper.py  Collapser.py  DFG.py  DFGOperator.py  FieldOps.py  Report.py  ReqFactory.py  RsHelpers.py  Storage.py  Struct.py  Symtab.py  Timing.py  TypeHintHelpers.py  Wires.py  build-test-matrix.py  dfgexec.py  drawcirc.py  types.py  vercomp.py
common/: App.py
src/: aux_vector_clock.rs  bloom_filter.rs  ivc_increment.rs  main.rs  minroot.rs  runner.rs  types.rs
src/circom_circuits/: aux_vector_clock.circom
src/circuits/: aux_vector_clock.rs  bloom_filter.rs  ivc_increment.rs  macro.h  minroot.rs  mod.rs  pinocchio.template  pinocchio_circuit.template.rs  wrapper.rs
src/circuits/utility/: func.rs  mod.rs
